maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: not found: value e
override def run() {var c = 0;while (getY()!=0) {setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (aMurN(e) && getY() !=0 && c%4 != 0) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                             ^